tests/NormalTests/paczka1/fuzzy1/25165992.err
Error in line 1: Tsbn S473 73,5
Error in line 5: Tsbn S665 48,1
Error in line 11: jnD S665 8,8
Error in line 20: 8U42 S954 96,6
Error in line 19: Tsbn S473 164,8
Error in line 22: oyw0D9cuKg S954 43,0
Error in line 33: Cq9v0l9Qp S665 99,9
